--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,68 +1,63 @@
 <%
-  title "About"
+  title 'About'
 
   description "About Detention Logs, a new independent project committed to transparency and accountability in Australia’s immigration detention network."
 %>
 
-<%= render 'layouts/sub-nav', :breadcrumbs => false %>
+<header class="article-header">
+  <h1>About Detention Logs</h1>
+</header>
 
-<section class="body-container" id="main" role="main" >
-  <article class="main-reading">
-    <header class="article-header">
-      <h1>About Detention Logs</h1>
-    </header>
+<nav class="toc">
+  <h2>Contents</h2>
 
-    <nav class="toc">
-      <h2>Contents</h2>
-      <ol>
-          <li><a href="#contact">Contact</a></li>
+  <ol>
+    <li><a href="#contact">Contact</a></li>
 
-          <li><a href="#team">The Team</a></li>
-      </ol>
-    </nav>
+    <li><a href="#team">The Team</a></li>
+  </ol>
+</nav>
 
-    <p>Detention Logs is a new independent project committed to transparency and accountability in Australia’s immigration detention network. We aim to support those reporting on and discussing these issues by breaking through misinformation and political spin.</p>
+<p>Detention Logs is a new independent project committed to transparency and accountability in Australia’s immigration detention network. We aim to support those reporting on and discussing these issues by breaking through misinformation and political spin.</p>
 
-    <p>Immigration detention is one of the most hotly debated, contested and emotional topics in Australia, but journalists’ access to detention centres is limited and information from the inside is scarce. Public policy surrounding asylum seekers and immigration should be shaped by informed opinions, and our mission is to arm the public with those vital facts to raise the standard of discussion.</p>
+<p>Immigration detention is one of the most hotly debated, contested and emotional topics in Australia, but journalists’ access to detention centres is limited and information from the inside is scarce. Public policy surrounding asylum seekers and immigration should be shaped by informed opinions, and our mission is to arm the public with those vital facts to raise the standard of discussion.</p>
 
-    <p>We have a special focus on supporting journalists in understanding and accessing more information to help them investigate and report on immigration detention. We also produce our own original reporting and analysis of the data that we publish to help explain its significance and put the questions it raises to those accountable.</p>
+<p>We have a special focus on supporting journalists in understanding and accessing more information to help them investigate and report on immigration detention. We also produce our own original reporting and analysis of the data that we publish to help explain its significance and put the questions it raises to those accountable.</p>
 
-    <p>As we continue to build and expand the site we want to hear from those using the information. Let us know what features you would like to see, and contact us for any feedback, contributions or requests.</p>
+<p>As we continue to build and expand the site we want to hear from those using the information. Let us know what features you would like to see, and contact us for any feedback, contributions or requests.</p>
 
-    <h2 id="contact">Contact Detention Logs</h2>
+<h2 id="contact">Contact Detention Logs</h2>
 
-    <dl>
-      <dt>Email</dt>
-      <dd><a href="&#x6D;&#x61;&#105;&#x6C;&#116;&#111;:&#100;&#x65;&#x74;&#101;&#110;&#x74;&#x69;o&#x6E;&#108;&#x6F;g&#115;&#64;&#114;&#x69;&#x73;&#x65;&#x75;&#x70;&#x2E;&#110;&#101;&#116;" title="Email Detention Logs">&#100;&#x65;&#x74;&#101;&#110;&#x74;&#x69;o&#x6E;&#108;&#x6F;g&#115;&#64;&#114;&#x69;&#x73;&#x65;&#x75;&#x70;&#x2E;&#110;&#101;&#116;</a></dd>
+<dl>
+  <dt>Email</dt>
+    <dd><a href="&#x6D;&#x61;&#105;&#x6C;&#116;&#111;:&#100;&#x65;&#x74;&#101;&#110;&#x74;&#x69;o&#x6E;&#108;&#x6F;g&#115;&#64;&#114;&#x69;&#x73;&#x65;&#x75;&#x70;&#x2E;&#110;&#101;&#116;" title="Email Detention Logs">&#100;&#x65;&#x74;&#101;&#110;&#x74;&#x69;o&#x6E;&#108;&#x6F;g&#115;&#64;&#114;&#x69;&#x73;&#x65;&#x75;&#x70;&#x2E;&#110;&#101;&#116;</a></dd>
 
-      <dt>PGP Public Key</dt>
-      <dd><a href="https://drive.google.com/file/d/0B3KLm42FZ4JfbFhwZjZEc1BNbzg/edit?usp=sharing" title="Access the Detention Logs PGP Public Key Block document.">Detention Logs Public Key</a></dd>
+  <dt>PGP Public Key</dt>
+    <dd><a href="https://drive.google.com/file/d/0B3KLm42FZ4JfbFhwZjZEc1BNbzg/edit?usp=sharing" title="Access the Detention Logs PGP Public Key Block document.">Detention Logs Public Key</a></dd>
 
-      <dt>Fingerprint</dt>
-      <dd>E86C 5B8C 576E 00EB 2250 746E 01F0 796E 12B0 24A3</dd>
-    </dl>
+  <dt>Fingerprint</dt>
+    <dd>E86C 5B8C 576E 00EB 2250 746E 01F0 796E 12B0 24A3</dd>
+</dl>
 
-    <p>You can also connect with Detention Logs on <a href="https://twitter.com/detentionlogs" title="Detention Logs Twitter Profile">Twitter with @detentionlogs</a> and on <a href="https://github.com/DetentionLogs" title="Detention Logs profile on GitHub">Github with DetentionLogs</a>.</p>
+<p>You can also connect with Detention Logs on <a href="https://twitter.com/detentionlogs" title="Detention Logs Twitter Profile">Twitter with @detentionlogs</a> and on <a href="https://github.com/DetentionLogs" title="Detention Logs profile on GitHub">Github with DetentionLogs</a>.</p>
 
-    <h2 id="team">The Team</h2>
+<h2 id="team">The Team</h2>
 
-    <dl>
-      <dt>Editor</dt>
-        <dd><a href="http://equivalentideas.com" title="Luke Bacon's website.">Luke Bacon</a></dd>
+<dl>
+  <dt>Editor</dt>
+    <dd><a href="http://equivalentideas.com" title="Luke Bacon's website.">Luke Bacon</a></dd>
 
-      <dt>Current Contributors</dt>
-        <dd><a href="https://twitter.com/pipb25" title="Pip Brown on Twitter.">Pip Brown</a></dd>
+  <dt>Current Contributors</dt>
+    <dd><a href="https://twitter.com/pipb25" title="Pip Brown on Twitter.">Pip Brown</a></dd>
 
-      <dt>Founders</dt>
-        <dd><a href="http://equivalentideas.com" title="Luke Bacon's website.">Luke Bacon</a>, <a href="http://twitter.com/Lawrence_Bull" title="Lawrence Bull on Twitter">Lawrence Bull</a>, <a href="http://twitter.com/FarrellPF" title="Paul Farrell on Twitter">Paul Farrell</a></dd>
+  <dt>Founders</dt>
+    <dd><a href="http://equivalentideas.com" title="Luke Bacon's website.">Luke Bacon</a>, <a href="http://twitter.com/Lawrence_Bull" title="Lawrence Bull on Twitter">Lawrence Bull</a>, <a href="http://twitter.com/FarrellPF" title="Paul Farrell on Twitter">Paul Farrell</a></dd>
 
-      <dt>Data Processing</dt>
-        <dd><a href="http://equivalentideas.com" title="Luke Bacon's website.">Luke Bacon</a>, <a href="https://twitter.com/pipb25" title="Pip Brown on Twitter.">Pip Brown</a>, <a href="http://twitter.com/Lawrence_Bull" title="Lawrence Bull on Twitter">Lawrence Bull</a>, <a href="http://twitter.com/FarrellPF" title="Paul Farrell on Twitter">Paul Farrell</a>, Vincent Farrell, and <a href="http://peterwilliamfrancis.tumblr.com/">Peter Francis</a></p></dd>
+  <dt>Data Processing</dt>
+    <dd><a href="http://equivalentideas.com" title="Luke Bacon's website.">Luke Bacon</a>, <a href="https://twitter.com/pipb25" title="Pip Brown on Twitter.">Pip Brown</a>, <a href="http://twitter.com/Lawrence_Bull" title="Lawrence Bull on Twitter">Lawrence Bull</a>, <a href="http://twitter.com/FarrellPF" title="Paul Farrell on Twitter">Paul Farrell</a>, Vincent Farrell, and <a href="http://peterwilliamfrancis.tumblr.com/">Peter Francis</a></p></dd>
 
-      <dt>Website</dt>
-        <dd><a href="http://equivalentideas.com" title="Luke Bacon's website.">Luke Bacon</a></p></dd>
-    </dl>
+  <dt>Website</dt>
+    <dd><a href="http://equivalentideas.com" title="Luke Bacon's website.">Luke Bacon</a></p></dd>
+</dl>
 
-    <p>Thanks to <a href="http://wendybacon.com">Wendy Bacon</a>, <a href="http://bryanmcleod.com.au/">Bryan McLeod</a>, <a href="http://theglobalmail.org/">The Global Mail</a>, <a href="http://newmatilda.com/">New Matilda</a>, <a href="http://openaustralia.org">Open Australia</a>, <a href="http://investigate.org.au">The Australian Centre for Independent Journalism</a> and <a href="http://guardian.co.uk/australia">The Guardian Australia</a>.</p>
-  </article>
-</section>
+<p>Thanks to <a href="http://wendybacon.com">Wendy Bacon</a>, <a href="http://bryanmcleod.com.au/">Bryan McLeod</a>, <a href="http://theglobalmail.org/">The Global Mail</a>, <a href="http://newmatilda.com/">New Matilda</a>, <a href="http://openaustralia.org">Open Australia</a>, <a href="http://investigate.org.au">The Australian Centre for Independent Journalism</a> and <a href="http://guardian.co.uk/australia">The Guardian Australia</a>.</p>
