--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -1,6 +1,6 @@
 <%= render 'layouts/header' %>
 
-<%= render 'layouts/sub-nav', :breadcrumbs => false %>
+<%= render 'layouts/sub-nav' %>
 
 <section class="body-container" id="main" role="main" >
   <article class="main-reading">
