--- a/app/views/incidents/about.html.erb
+++ b/app/views/incidents/about.html.erb
@@ -2,6 +2,8 @@
   title 'About Incident Reports'
 
   description 'Incident Reports are records of events that occur in immigration detention, recorded by detention centre staff for the Australian Government.'
+
+  breadcrumb :about_incidents
 %>
 
 <header class="article-header">
