add text block to default page layout

--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -3,7 +3,7 @@
 <%= render 'layouts/sub-nav' %>
 
 <section class="body-container" id="main" role="main" >
-  <article class="main-reading">
+  <article class="main-reading text-block">
     <%= yield %>
   </article>
 </section>
