--- a/app/assets/stylesheets/objects/_footer.scss
+++ b/app/assets/stylesheets/objects/_footer.scss
@@ -49,7 +49,7 @@
   @include rem(padding, ms(-3));
   @include rem(font-size, ms(0));
   display: block;
-  color: $color-grey-med;
+  color: $color-grey-dark;
   text-align: right;
   text-transform: uppercase;
 
