--- a/app/assets/stylesheets/objects/incidents/_incident-base.scss
+++ b/app/assets/stylesheets/objects/incidents/_incident-base.scss
@@ -1,14 +1,14 @@
 .incident-field-label {
-    @include rem(font-size, ms(0));
-    color: $color-grey-med;
-    text-transform: uppercase;
-    letter-spacing: 1px;
+  @include rem(font-size, ms(0));
+  color: $color-grey-dark;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
 // .incident-field-value {}
 
 .incident-primary-meta {
-    .incident-field-value {
-        font-weight: bold;
-    }
+  .incident-field-value {
+    font-weight: bold;
+  }
 }
