--- a/app/assets/stylesheets/objects/incidents/_incident-index-river.scss
+++ b/app/assets/stylesheets/objects/incidents/_incident-index-river.scss
@@ -69,7 +69,7 @@ $table-bp-l: 70em;
     margin-bottom: 0;
     border-style: solid;
     border-color: $color-grey-light;
-    color: $color-grey-dark;
+    color: $color-grey-dark-2;
     font-weight: bold;
   }
 
