--- a/app/assets/stylesheets/objects/_reading-page.scss
+++ b/app/assets/stylesheets/objects/_reading-page.scss
@@ -1,18 +1,17 @@
-
 .article-header {
-    @include rem(margin-bottom, ms(7));
+  @include rem(margin-bottom, ms(7));
 }
 
 .article-body .toc {
-    @extend %default-secondary-column;
+  @extend %default-secondary-column;
 
+  @include breakpoint($bp-l) {
+    float: right;
+  }
+
+  h2 {
     @include breakpoint($bp-l) {
-        float: right;
+      color: $color-grey-dark;
     }
-
-    h2 {
-        @include breakpoint($bp-l) {
-            color: $color-grey-med;
-        }
-    }
+  }
 }
