--- a/app/assets/stylesheets/partials/_sub-navigation.scss
+++ b/app/assets/stylesheets/partials/_sub-navigation.scss
@@ -1,6 +1,6 @@
 .sub-nav {
   @extend %default-page-container;
-  @extend .supporting;
+  @extend %supporting;
   @include rem(margin-top, ms(2));
   @include rem(margin-bottom, 0);
   @include rem(padding-top, ms(-5));
