--- a/app/assets/stylesheets/modules/_breakpoints.scss
+++ b/app/assets/stylesheets/modules/_breakpoints.scss
@@ -1,10 +1,12 @@
-//Breakpoints
+// Breakpoints
+// for use in media queries
+// in conjunction with the Breakpoint Compass extension
 
 $bp-xxs:  20em;
-$bp-xs:  30em;
-$bp-s: 35em;
-$bp-m: 43em;
-$bp-l:  55em;
-$bp-xl: 65em;
-$bp-xxl: 75em;
+$bp-xs:   30em;
+$bp-s:    35em;
+$bp-m:    43em;
+$bp-l:    55em;
+$bp-xl:   65em;
+$bp-xxl:  75em;
 $bp-xxxl: 85em;
