--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -9,6 +9,7 @@
 <%= render 'layouts/sub-nav' %>
 
 <section class="body-container incident-index" id="content" role="main">
+	<a class="skip-link" href="#results">Skip to filter results</a>
 
 	<header class="page-header">
 		<h1 class="page-title">Incident Explorer</h1>
