added role="form" to the forms

--- a/pattern-lab/_patterns/02-organisms/04-incidents/00-incident-index-filters.mustache
+++ b/pattern-lab/_patterns/02-organisms/04-incidents/00-incident-index-filters.mustache
@@ -1,4 +1,4 @@
-<form class="incident-filters" id="filters" accept-charset="UTF-8" action="/data/incidents" method="get">
+<form class="incident-filters" id="filters" accept-charset="UTF-8" action="/data/incidents" method="get" role="form">
 
     <h2><legend>Filter Incident List</legend></h2>
 
