--- a/app/views/incidents/_incident-filters.erb
+++ b/app/views/incidents/_incident-filters.erb
@@ -1,4 +1,4 @@
-<%= form_tag(incidents_path, :method => :get, :class => 'incident-filters', :id => 'filters') do %>
+<%= form_tag(incidents_path, :method => :get, :class => 'incident-filters', :id => 'filters', :role => 'form') do %>
   <h2 class="incident-filters-title"><legend>Filter Incident List</legend></h2>
 
   <div class="incident-filters-inputs">
