properly remove class and id attributes from breadcrumb container

--- a/app/views/layouts/_sub-nav.html.erb
+++ b/app/views/layouts/_sub-nav.html.erb
@@ -5,8 +5,8 @@
       <%= breadcrumbs style: :ul,
                       autoroot: false,
                       link_current: true,
-                      class: "",
-                      id: "",
+                      class: nil,
+                      id: nil,
                       semantic: true %>
     </nav>
   <% end %>
