--- a/app/assets/stylesheets/objects/_footer.scss
+++ b/app/assets/stylesheets/objects/_footer.scss
@@ -7,6 +7,7 @@
   }
 
   @include breakpoint($bp-l) {
+    @include rem(margin-bottom, ms(1));
     padding-right: gutter-span();
     padding-left: gutter-span();
   }
