import home scss partial

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -72,6 +72,12 @@
 @import "objects/incidents/incident-adopt";
 
 /*------------------------------------*\
+    $HOME
+\*------------------------------------*/
+
+@import "objects/home.scss";
+
+/*------------------------------------*\
     $COMPONENTS
 \*------------------------------------*/
 @import "objects/accordion";
