--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,38 @@
-<h1 class="logo"><a href="" rel="home">Detention Logs<span> beta</span></a></h1>
+<%
+  title 'Home'
 
-<p class="lede">We publish data, documents and investigations that reveal new perspectives on conditions and events inside immigration detention. Detention Logs supports deeper community knowledge of and accountability
-for conditions in Australia's immigration detention network.</p>
+  description "We publish data, documents and investigations that reveal new perspectives on conditions and events inside immigration detention."
+%>
 
-<p class="distinct"><strong>Access the <a href="/data/incidents" title="Explore Incident Reports, records of events that occur in immigration detention, recorded by detention centre staff for the Australian Government">data</a>.</strong></p>
+<article id="main" role="main">
+  <section class="deep-body-container front-matter">
+      <h1 class="logo" role="banner">Detention Logs</h1>
 
-<p class="distinct"><strong>Follow our <a href="/investigations" title="A list of investigation that have drawn on the information published by Detention Logs.">investigations</a>.</strong></p>
+      <p class="lede">We publish data, documents and investigations that reveal new perspectives on conditions and events inside Australia's immigration detention network. Detention Logs supports deeper community knowledge of and accountability for conditions in detention.</p>
 
-<p class="distinct"><strong>Learn more <a href="/about" title="Find out more about this project and the people involved.">about the project</a>.</strong></p>
+      <section class="module">
+        <h2 class="module-heading"><a href="{{ link.templates-incident-index}}">Data</a></h2>
+        <p class="module-body">So far Detention Logs has published 7632 incident reports produced between 3 Oct 2009 and 26 May 2011 in Australia's onshore detention facilities.</p>
+      </section>
 
-<p class="distinct"><strong>Find out how you can <a href="/contribute" title="Help bring more documents to light.">contribute</a>.</strong></p>
+      <section class="module">
+        <h2 class="module-heading"><a href="{{ link.templates-article }}">Investigations</a></h2>
+        <p class="module-body">The information on this website is used in reporting on and research into detention.</p>
+      </section>
+
+      <section class="module">
+        <h2 class="module-heading"><a href="{{ link.templates-article }}">Contribute</a></h2>
+        <p class="module-body">Find out how you can help improve this resource and bring more information to light.</p>
+      </section>
+  </section>
+
+  <figure class="feature-block figure-quote deep-body-container">
+    <blockquote class="feature-object lede">
+      &hellip;Furthermore, at the September doctor’s meeting, the acting site manager expressed a view that IHMS was set up so the Australia Federal Government could divest itself of risk from the lack of appropriate care provided to asylum seekers. He went on to say there will one day be a royal commission into what is taking place on Christmas Island. He&nbsp;suggested we document&nbsp;well.
+    </blockquote>
+
+    <figcaption class="feature-object">
+      <cite>Extract from a “letter of concern” by 15 doctors working at Christmas&nbsp;Island Detention&nbsp;Centre, Novermber&nbsp;2013 <a href="http://www.theguardian.com/world/2013/dec/19/revealed-doctors-outrage-over-unsafe-refugee-patients">reported by Guardian&nbsp;Australia</a></cite>
+    </figcaption>
+  </figure>
+</article>
