fixer typo and changed SASH glossary item to most basic usage

--- a/app/views/pages/glossary.html.erb
+++ b/app/views/pages/glossary.html.erb
@@ -280,7 +280,7 @@
       <p>According to DIAC&#8217;s website &#8216;Placement in immigration residential housing allows people in immigration detention to live in a more domestic environment and permits a greater degree of autonomy over their life while remaining formally in immigration detention.</p>
     </dd>
 
-  <dt id="SASH-Way=tch">SASH Watch</dt>
+  <dt id="SASH">SASH</dt>
     <dd>Suicide and Self-Harm Watch</dd>
 
   <dt id="Scherger-IDC">Scherger IDC</dt>
