--- a/pattern-lab/_patterns/00-atoms/04-images/00-logo.mustache
+++ b/pattern-lab/_patterns/00-atoms/04-images/00-logo.mustache
@@ -1,4 +1,4 @@
 <a class="banner" href="{{ link.templates-homepage }}" rel="home">
-    <h1 class="logo">Detention Logs</h1>
+    <span class="logo">Detention Logs</span>
     <p class="tagline">Inside Australia's immigration detention</p>
 </a>
