add form reset button

--- a/app/views/incidents/_incident-filters.erb
+++ b/app/views/incidents/_incident-filters.erb
@@ -30,5 +30,7 @@
     </fieldset>
 
     <input class="btn btn-submit" type="submit" role="button" value="Find incident reports"/>
+
+    <button class="btn-reset" type="reset" name="reset">reset</button>
   </div>
 <% end %>
