adjust 'data' section sentence structure

--- a/app/views/home/frontpage.html.erb
+++ b/app/views/home/frontpage.html.erb
@@ -12,7 +12,7 @@
 
       <section class="module">
         <h2 class="module-heading"><a href="{{ link.templates-incident-index}}">Data</a></h2>
-        <p class="module-body">So far Detention Logs has published 7632 incident reports produced between 3 Oct 2009 and 26 May 2011 in Australia's onshore detention facilities.</p>
+        <p class="module-body">So far Detention Logs has published 7632 incident reports produced at Australia's onshore immigration detention facilities between 3 Oct 2009 and 26 May 2011.</p>
       </section>
 
       <section class="module">
