add visually hidden placeholder and class for use

--- a/app/assets/stylesheets/partials/_typebase.scss
+++ b/app/assets/stylesheets/partials/_typebase.scss
@@ -145,3 +145,8 @@ div[aria-hidden="false"] { display: block; }
 .body-container :target {
   background-color: $color-salient-light;
 }
+
+%visuallyhidden,
+.visuallyhidden {
+  @include visuallyhidden;
+}
