simplify incident filter styles

--- a/app/assets/stylesheets/objects/incidents/_incident-index-filters.scss
+++ b/app/assets/stylesheets/objects/incidents/_incident-index-filters.scss
@@ -2,23 +2,20 @@
   @include rem(padding, ms(1));
   @include clearfix;
   @include rem(border-top-width, ms(-3));
-  background-color: $color-grey-light;
+  position: relative;
   border-top-style: solid;
   border-top-color: $color-information;
   border-bottom-right-radius: .5em;
   border-bottom-left-radius: .5em;
+  background-color: $color-grey-light;
 
 
   @include breakpoint(45em) {
     @include rem(font-size, ms(0));
   }
 
-  @include breakpoint(87em) {
-    @include rem(padding-bottom, ms(2));
-  }
-
-  @include breakpoint(98em) {
-    @include rem(font-size, ms(1));
+  @include breakpoint(62em) {
+    @include rem(padding, ms(3));
   }
 
   h2 {
@@ -27,9 +24,7 @@
     display: inline-block;
   }
 
-  select,
-  .form-group-start-date input,
-  .form-group-end-date input {
+  select {
     width: 100%;
     max-width: 100%;
 
@@ -48,37 +43,60 @@
     }
   }
 
-  div.collapsiblecontent {
-    @include clearfix;
-  }
+  // div.collapsiblecontent {
+  //   @include clearfix;
+  // }
 
   .form-group-type {
     @include breakpoint(45em) {
-      @include isolation-span(2, 1, left, $grid: 8);
+      padding-right: gutter-span();
+      float: left;
+      clear: left;
+      width: 25%;
     }
 
-    @include breakpoint($bp-l) {
-      @include grid-span(3, 1);
-    }
-
-    @include breakpoint(68em) {
-      @include grid-span(2, 1);
+    @include breakpoint(62em) {
+      padding-right: gutter-span();
+      width: 20%;
     }
   }
 
   .form-group-location {
-    clear: right;
-
     @include breakpoint(45em) {
-      @include isolation-span(2, 3, none, $grid: 8);
+      padding-right: gutter-span();
+      float: left;
+      width: 25%;
     }
 
-    @include breakpoint($bp-l) {
-      @include grid-span(3, 4);
+    @include breakpoint(62em) {
+      padding-right: gutter-span();
+      width: 20%;
+    }
+  }
+
+  .form-group-date {
+    @include breakpoint(45em) {
+      float: right;
+      clear: right;
+      width: 50%;
     }
 
-    @include breakpoint(68em) {
-      @include grid-span(2, 3);
+    @include breakpoint(62em) {
+      @include rem(width, 23);
+      float: left;
+      clear: none;
+    }
+
+    input {
+      max-width: 100%;
+
+      @include breakpoint(45em) {
+        width: 100%;
+      }
+
+      @include breakpoint($bp-l) {
+        width: auto;
+      }
     }
   }
 
@@ -87,68 +105,57 @@
     display: inline-block;
 
     @include breakpoint(45em) {
-      display: block;
+      max-width: 10rem;
     }
   }
 
   .form-group-start-date {
-    @include rem(margin-right, ms(2));
+    margin-right: gutter-span();
 
     @include breakpoint(45em) {
-      @include isolation-span(2, 5, none, $grid: 8);
+      margin-right: gutter-span() * 2;
+      // float: left;
+      width: column-span(2, 1, $grid: 4);
     }
 
     @include breakpoint($bp-l) {
-      @include grid-span(2, 7);
-      @include rem(margin-right, ms(2));
-      width: auto;
-    }
-
-    @include breakpoint(68em) {
-      @include grid-span(2, 5);
-      @include rem(margin-right, ms(2));
       width: auto;
     }
   }
 
   .form-group-end-date {
     @include breakpoint(45em) {
-      @include isolation-span(2, 7, right, $grid: 8);
+      width: column-span(2, 3, $grid: 4);
     }
 
     @include breakpoint($bp-l) {
-      @include rem(margin-right, gutter-span());
-      float: left;
-      clear: right;
+      float: none;
       width: auto;
-      margin-left: 0;
-    }
-
-    @include breakpoint(68em) {
-      @include rem(margin-right, ms(2));
     }
   }
 
   .form-group-has-detail-report {
     @include breakpoint(45em) {
-      @include isolation-span(2, 1, left, $grid: 8);
+      @include rem(margin-top, ms(0));
+      @include rem(margin-right, ms(2));
+      float: left;
+      clear: right;
     }
 
-    @include breakpoint(68em) {
-      @include rem(margin-top, 2.3);
-      @include rem(margin-right, ms(2));
+    @include breakpoint(62em) {
+      @include rem(margin-top, ms(6));
+    }
+
+    @include breakpoint(95em) {
+      position: relative;
       float: left;
       clear: none;
       margin-left: 0;
       width: auto;
     }
-
-    @include breakpoint($bp-xxl) {
-      clear: none;
-    }
   }
 
-  input[type="submit"] {
+  .btn-submit {
     @include rem(margin-top, ms(4));
     display: block;
     clear: both;
@@ -156,27 +163,17 @@
 
     @include breakpoint(35em) {
       width: auto;
+    }
+
+    @include breakpoint(45em) {
       float: right;
       clear: right;
     }
 
-    @include breakpoint(68em) {
+    @include breakpoint(62em) {
       @include rem(margin-top, ms(7));
-      clear: right;
-    }
-
-    @include breakpoint(79em) {
-      clear: right;
+      // float: right;
+      // clear: right;
     }
   }
-
-  .incident-filters-toggle {
-    @include rem(font-size, ms(0));
-    float: right;
-    clear: right;
-  }
-}
-
-.incident-filters-collapsible {
-  @include clearfix;
 }
