--- a/app/views/incidents/_incident-filters.erb
+++ b/app/views/incidents/_incident-filters.erb
@@ -1,5 +1,5 @@
 <%= form_tag(incidents_path, :method => :get, :class => 'incident-filters', :id => 'filters', :role => 'form') do %>
-  <h2 class="incident-filters-title">Filter Incident List</h2>
+  <h2 class="incident-filters-title">Find Incident Reports</h2>
 
   <div class="incident-filters-inputs">
     <fieldset class="form-group-type">
@@ -43,6 +43,6 @@
       </label>
     </fieldset>
 
-    <input class="btn btn-submit" type="submit" role="button" value="Find incident reports"/>
+    <input class="btn btn-submit" type="submit" role="button" value="Find reports"/>
   </div>
 <% end %>
